--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,15 @@
 [package]
-name = "rusty-graphql"
+name = "rusty-gql"
 version = "0.1.0"
-edition = "2021"
+edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[workspace]
+members = ["examples/*"]
 
 [dependencies]
 anyhow = "1.0.44"
+askama = "0.10.5"
 async-trait = "0.1.51"
+axum = "0.2.5"
 graphql-parser = "0.3.0"
+serde = "1.0.130"
