--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ name = "rusty-gql"
 version = "0.1.0"
 
 [workspace]
-members = ["examples/*", "derive"]
+members = ["examples/*", "codegen"]
 
 [dependencies]
 anyhow = "1.0.44"
@@ -12,5 +12,5 @@ askama = "0.10.5"
 async-trait = "0.1.51"
 axum = "0.2.5"
 graphql-parser = "0.3.0"
-rusty-gql-derive = {path = "derive"}
+rusty-gql-codegen = {path = "codegen"}
 serde = "1.0.130"
