fix executor context

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ anyhow = "1.0.44"
 askama = "0.10.5"
 async-trait = "0.1.51"
 axum = "0.2.5"
+futures = "0.3.17"
 graphql-parser = "0.3.0"
 rusty-gql-codegen = {path = "codegen"}
 serde = "1.0.130"
