--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ futures = "0.3.17"
 graphql-parser = "0.3.0"
 rusty-gql-codegen = {path = "codegen"}
 serde = "1.0.130"
+tokio = { version = "1.12.0", features = ["fs", "io-std", "io-util", "rt-multi-thread", "sync", "signal", "macros"] }
