--- a/codegen/Cargo.toml
+++ b/codegen/Cargo.toml
@@ -12,3 +12,6 @@ darling = "0.13.0"
 proc-macro2 = "1.0.29"
 quote = "1.0.10"
 syn = { version = "1.0.80", features = ["full", "extra-traits", "visit-mut", "visit"] }
+
+[dev-dependencies]
+tokio = { version = "1.12.0", features = ["fs", "io-std", "io-util", "rt-multi-thread", "sync", "signal", "macros"] }
