--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,6 @@ axum = "0.2.5"
 futures = "0.3.17"
 graphql-parser = "0.3.0"
 rusty-gql-codegen = {path = "codegen"}
-serde = "1.0.130"
-tokio = { version = "1.12.0", features = ["fs", "io-std", "io-util", "rt-multi-thread", "sync", "signal", "macros"] }
+serde = {version = "1.0.130", features = ["derive"]}
+serde_json = "1.0.68"
+tokio = {version = "1.12.0", features = ["fs", "io-std", "io-util", "rt-multi-thread", "sync", "signal", "macros"]}
