--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ name = "rusty-gql"
 version = "0.1.0"
 
 [workspace]
-members = ["examples/*", "codegen"]
+members = ["examples/*", "codegen", "cli"]
 
 [dependencies]
 anyhow = "1.0.44"
