--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -5,6 +5,7 @@ version = "0.1.0"
 
 [dependencies]
 codegen = "0.1.3"
+futures = "0.3.17"
 graphql-parser = "0.3.0"
 rusty-gql = { path = "../", version = "0.1.0" }
 structopt = "0.3.25"
