--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -4,9 +4,9 @@ name = "rusty-gql-cli"
 version = "0.1.0"
 
 [dependencies]
+clap = "3.0.0-beta.5"
 codegen = "0.1.3"
 futures = "0.3.17"
 graphql-parser = "0.3.0"
 rusty-gql = { path = "../", version = "0.1.0" }
-structopt = "0.3.25"
 tokio = "1.13.0"
