--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -4,6 +4,7 @@ name = "rusty-gql-cli"
 version = "0.1.0"
 
 [dependencies]
+anyhow = "1.0.51"
 clap = "3.0.0-beta.5"
 codegen = "0.1.3"
 futures = "0.3.17"
