--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ async-trait = "0.1.51"
 axum = "0.2.5"
 futures = "0.3.17"
 graphql-parser = "0.3.0"
+rocket = "0.4.10"
 rusty-gql-codegen = {path = "codegen"}
 serde = {version = "1.0.130", features = ["derive"]}
 serde_json = "1.0.68"
