--- a/examples/actix-web/Cargo.toml
+++ b/examples/actix-web/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "actix-web"
-version = "0.1.0"
 edition = "2021"
+name = "rusty-gql-actix-web"
+version = "0.1.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 actix-web = "3.3.2"
-rusty-gql = { path = "../.." }
+rusty-gql = {path = "../.."}
