--- a/frameworks/actix_web/Cargo.toml
+++ b/frameworks/actix_web/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
-edition = "2021"
-name = "rusty-gql-actix-web-example"
+name = "rusty-gql-actix-web"
 version = "0.1.0"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 actix-web = "3.3.2"
-rusty-gql = {path = "../.."}
-rusty-gql-cli = {path = "../../cli"}
+futures = "0.3.18"
+rusty-gql = { path = "../..", version = "0.1.0" }
+serde_json = "1.0.72"
