--- a/frameworks/axum/Cargo.toml
+++ b/frameworks/axum/Cargo.toml
@@ -1,11 +1,10 @@
 [package]
-edition = "2021"
-name = "rusty-gql-actix-web-example"
+name = "rusty-gql-axum"
 version = "0.1.0"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "3.3.2"
-rusty-gql = {path = "../.."}
-rusty-gql-cli = {path = "../../cli"}
+axum = "0.4.2"
+rusty-gql = { path = "../..", version = "0.1.0" }
