--- a/frameworks/rocket/Cargo.toml
+++ b/frameworks/rocket/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-edition = "2021"
-name = "rusty-gql-actix-web-example"
+name = "rocket"
 version = "0.1.0"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "3.3.2"
-rusty-gql = {path = "../.."}
-rusty-gql-cli = {path = "../../cli"}
+rocket = "0.4.10"
+rusty-gql = { path = "../..", version = "0.1.0" }
+serde_json = "1.0.72"
