--- a/frameworks/rocket/Cargo.toml
+++ b/frameworks/rocket/Cargo.toml
@@ -9,3 +9,6 @@ edition = "2021"
 rocket = "0.4.10"
 rusty-gql = { path = "../..", version = "0.1.0" }
 serde_json = "1.0.72"
+
+[toolchain]
+channel = "nightly"
