--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ async-trait = "0.1.51"
 futures = "0.3.17"
 graphql-parser = "0.3.0"
 http = "0.2.5"
+mime = "0.3.16"
 rusty-gql-codegen = {path = "codegen"}
 serde = {version = "1.0.130", features = ["derive"]}
 serde_json = "1.0.68"
