--- a/frameworks/rocket/Cargo.toml
+++ b/frameworks/rocket/Cargo.toml
@@ -6,9 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rocket = "0.4.10"
+rocket = { version = "0.5.0-rc.1", default-features = false }
 rusty-gql = { path = "../..", version = "0.1.0" }
 serde_json = "1.0.72"
+tokio-util = { version = "0.6.9", default-features = false, features = ["compat"] }
 
 [toolchain]
 channel = "nightly"
