--- a/frameworks/actix_web/Cargo.toml
+++ b/frameworks/actix_web/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "3.3.2"
+actix-web = { version = "4.0.0-beta.14", default-features = false }
 futures = "0.3.18"
 rusty-gql = { path = "../..", version = "0.1.0" }
 serde_json = "1.0.72"
+serde_urlencoded = "0.7.0"
