--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -9,7 +9,7 @@ anyhow = "1.0.51"
 axum = "0.4.2"
 clap = "3.0.0-beta.5"
 codegen = "0.1.3"
-futures = "0.3.17"
+futures-util = "0.3.18"
 graphql-parser = "0.3.0"
 rocket = "0.4.10"
 rusty-gql = { path = "../", version = "0.1.0" }
