--- a/frameworks/actix_web/Cargo.toml
+++ b/frameworks/actix_web/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 actix-web = { version = "4.0.0-beta.14", default-features = false }
-futures = "0.3.18"
+futures-util = "0.3.18"
 rusty-gql = { path = "../..", version = "0.1.0" }
 serde_json = "1.0.72"
 serde_urlencoded = "0.7.0"
