--- a/frameworks/axum/Cargo.toml
+++ b/frameworks/axum/Cargo.toml
@@ -9,7 +9,7 @@ version = "0.1.0"
 async-trait = "0.1.52"
 axum = {version = "0.4.2", features = ["ws", "headers"]}
 bytes = "1.1.0"
-futures = "0.3.18"
+futures-util = { version = "0.3.18", default-features = false, features = ["io", "sink"] }
 http-body = "0.4.4"
 rusty-gql = {path = "../..", version = "0.1.0"}
 serde_urlencoded = "0.7.0"
