--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,11 +10,11 @@ members = ["examples/*", "codegen", "cli", "frameworks/axum", "frameworks/actix_
 anyhow = "1.0.44"
 askama = "0.10.5"
 async-trait = "0.1.51"
-futures-util = { version = "0.3.18", default-features = false, features = ["io", "sink"] }
+futures-util = {version = "0.3.18", default-features = false, features = ["io", "sink"]}
 graphql-parser = "0.3.0"
 http = "0.2.5"
 mime = "0.3.16"
-rusty-gql-codegen = {path = "codegen"}
+rusty-gql-codegen = {registry = "ktra", version = "0.1.0"}
 serde = {version = "1.0.130", features = ["derive"]}
 serde_json = "1.0.68"
 tokio = {version = "1.12.0", features = ["fs", "io-std", "io-util", "rt-multi-thread", "sync", "signal", "macros"]}
