--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -8,10 +8,10 @@ actix-web = "3.3.2"
 anyhow = "1.0.51"
 async-recursion = "0.3.2"
 axum = "0.4.2"
-clap = "3.0.0-beta.5"
+clap = { version = "3.0.0-rc.11", features = ["cargo"] }
 codegen = "0.1.3"
 futures-util = "0.3.18"
 graphql-parser = "0.3.0"
-rusty-gql = { path = "../", version = "0.1.0" }
+rusty-gql = {registry = "ktra", version = "0.1.0"}
 serde_json = "1.0.72"
 tokio = "1.13.0"
