--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rusty-gql-cli"
 edition = "2021"
-version = "0.1.0"
+version = "0.0.2"
 authors = ["Tak-Iwamoto"]
 description = "A Command line tool for rusty-gql "
 license = "MIT"
@@ -9,11 +9,13 @@ documentation = "https://github.com/Tak-Iwamoto/rusty-gql"
 homepage = "https://github.com/Tak-Iwamoto/rusty-gql"
 repository = "https://github.com/Tak-Iwamoto/rusty-gql"
 
+[[bin]]
+name = "rusty-gql"
+path = "src/main.rs"
+
 [dependencies]
-actix-web = "3.3.2"
 anyhow = "1.0.51"
 async-recursion = "0.3.2"
-axum = "0.4.2"
 clap = { version = "3.0.0-rc.11", features = ["cargo"] }
 codegen = "0.1.3"
 futures-util = "0.3.18"
