--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,8 @@ futures-util = {version = "0.3.18", default-features = false, features = ["io", 
 graphql-parser = "0.3.0"
 http = "0.2.5"
 mime = "0.3.16"
-rusty-gql-codegen = {registry = "ktra", version = "0.1.0"}
+# rusty-gql-codegen = {registry = "ktra", version = "0.1.0"}
+rusty-gql-codegen = {path = "codegen"}
 serde = {version = "1.0.130", features = ["derive"]}
 serde_json = "1.0.68"
 tokio = {version = "1.12.0", features = ["fs", "io-std", "io-util", "rt-multi-thread", "sync", "signal", "macros"]}
