--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -16,7 +16,7 @@ path = "src/main.rs"
 [dependencies]
 anyhow = "1.0.51"
 async-recursion = "0.3.2"
-clap = { version = "3.0.0-rc.11", features = ["cargo"] }
+clap = { version = "3.0.5", features = ["cargo"] }
 codegen = "0.1.3"
 futures-util = "0.3.18"
 graphql-parser = "0.3.0"
