--- a/macro/Cargo.toml
+++ b/macro/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 edition = "2021"
-name = "rusty-gql-codegen"
+name = "rusty-gql-macro"
 version = "0.1.0"
 authors = ["Tak-Iwamoto"]
 description = "Macro for rusty-gql"
