--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -22,6 +22,7 @@ clap = { version = "3.0.5", features = ["cargo"] }
 codegen = "0.1.3"
 futures-util = "0.3.18"
 graphql-parser = "0.3.0"
+heck = "0.4.0"
 # rusty-gql = {registry = "ktra", version = "0.0.3"}
 rusty-gql = { path = "../", version = "0.0.3" }
 serde_json = "1.0.72"
