--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rusty-gql"
 edition = "2021"
-version = "0.1.0"
+version = "0.1.0-alpha"
 authors = ["Tak-Iwamoto"]
 description = "Schema first GraphQL Library for Rust"
 license = "MIT"
