--- a/frameworks/actix_web/Cargo.toml
+++ b/frameworks/actix_web/Cargo.toml
@@ -8,6 +8,6 @@ edition = "2021"
 [dependencies]
 actix-web = { version = "4.0.0-beta.14", default-features = false }
 futures-util = "0.3.18"
-rusty-gql = { path = "../..", version = "0.1.0" }
+rusty-gql = { path = "../.." }
 serde_json = "1.0.72"
 serde_urlencoded = "0.7.0"
