--- a/macro/Cargo.toml
+++ b/macro/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 edition = "2021"
 name = "rusty-gql-macro"
-version = "0.1.0"
+version = "0.1.0-alpha"
 authors = ["Tak-Iwamoto"]
 description = "Macro for rusty-gql"
 license = "MIT"
