--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -8,7 +8,7 @@ on:
       - 'docs/**'
 
 jobs:
-  deploy_en:
+  deploy:
     name: Deploy book on GitHub pages
     runs-on: ubuntu-latest
     steps:
@@ -18,7 +18,7 @@ jobs:
         uses: peaceiris/actions-mdbook@v1
       - name: Render book
         run: |
-          mdbook build -d gh-pages/master docs/book
+          mdbook build -d gh-pages/master docs
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v2.5.1
         with:
