--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -1,6 +1,7 @@
 name: Book
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - 'main'
@@ -14,14 +15,14 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Install mdBook
+      - name: Setup mdBook
         uses: peaceiris/actions-mdbook@v1
-      - name: Render book
-        run: |
-          mdbook build -d gh-pages/master docs
+        with:
+          mdbook-version: '0.4.10'
+      - run: mdbook build
+
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          keepFiles: true
-          publish_dir: docs/book/gh-pages
+          publish_dir: ./book
