--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -19,7 +19,7 @@ jobs:
         uses: peaceiris/actions-mdbook@v1
         with:
           mdbook-version: '0.4.10'
-      - run: mdbook build
+      - run: mdbook build docs
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
