--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ async-trait = "0.1.51"
 futures-util = {version = "0.3.18", default-features = false, features = ["io", "sink"]}
 graphql-parser = "0.3.0"
 http = "0.2.5"
-rusty-gql-macro = {path = "macro"}
+rusty-gql-macro = {path = "macro", version = "0.1.0-alpha"}
 serde = {version = "1.0.130", features = ["derive"]}
 serde_json = "1.0.68"
 tokio = {version = "1.12.0", features = ["fs", "io-std", "io-util", "rt-multi-thread", "sync", "signal", "macros"]}
