--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -23,6 +23,6 @@ codegen = "0.1.3"
 futures-util = "0.3.18"
 graphql-parser = "0.3.0"
 heck = "0.4.0"
-rusty-gql = { path = "../" }
+rusty-gql = { path = "../", version = "0.1.0-alpha" }
 serde_json = "1.0.72"
 tokio = "1.13.0"
