--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rusty-gql-cli"
 edition = "2021"
-version = "0.1.0-alpha"
+version = "0.1.0"
 authors = ["Tak-Iwamoto"]
 description = "A Command line tool for rusty-gql"
 license = "MIT"
@@ -23,6 +23,6 @@ codegen = "0.1.3"
 futures-util = "0.3.18"
 graphql-parser = "0.3.0"
 heck = "0.4.0"
-rusty-gql = { path = "../", version = "0.1.0-alpha" }
+rusty-gql = { path = "../", version = "0.1.0" }
 serde_json = "1.0.72"
 tokio = "1.13.0"
