--- a/examples/axum/Cargo.toml
+++ b/examples/axum/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 edition = "2021"
 name = "rusty-gql-axum-example"
-version = "0.1.0-alpha"
+version = "0.1.0"
 
 [dependencies]
 axum = {version = "0.4.2", features = ["headers"]}
