--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -23,6 +23,8 @@ codegen = "0.1.3"
 futures-util = "0.3.18"
 graphql-parser = "0.3.0"
 heck = "0.4.0"
+proc-macro2 = "1.0.36"
 rusty-gql = { path = "../", version = "0.1.0" }
 serde_json = "1.0.72"
+syn = {version = "1.0.86", features = ["full", "extra-traits"]}
 tokio = "1.13.0"
