--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -18,13 +18,14 @@ path = "src/main.rs"
 [dependencies]
 anyhow = "1.0.51"
 async-recursion = "0.3.2"
-clap = { version = "3.0.5", features = ["cargo"] }
+clap = {version = "3.0.5", features = ["cargo"]}
 codegen = "0.1.3"
 futures-util = "0.3.18"
 graphql-parser = "0.3.0"
 heck = "0.4.0"
 proc-macro2 = "1.0.36"
-rusty-gql = { path = "../", version = "0.1.0" }
+quote = "1.0.15"
+rusty-gql = {path = "../", version = "0.1.0"}
 serde_json = "1.0.72"
-syn = {version = "1.0.86", features = ["full", "extra-traits"]}
+syn = {version = "1.0.86", features = ["full", "extra-traits", "visit-mut", "visit"]}
 tokio = "1.13.0"
