--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -18,6 +18,7 @@ path = "src/main.rs"
 [dependencies]
 anyhow = "1.0.51"
 async-recursion = "0.3.2"
+async-trait = "0.1.52"
 clap = {version = "3.0.5", features = ["cargo"]}
 codegen = "0.1.3"
 futures-util = "0.3.18"
